updated js and css to fixed the title alignment

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -749,8 +749,8 @@ ul.masonry{
  #teachingsSectionHeaderBar {
     height: 65px;
     margin: 10px auto -6px;
-    max-width: 1580px;
-    min-width: 940px;
+    // max-width: 1580px;
+    // min-width: 940px;
     padding-bottom: 1px;
 }
 #teachingsBarInnerWrapper{
